--- a/index.html
+++ b/index.html
@@ -4,7 +4,169 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/fonts/fonts.css" />
+
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="header-container">
+        <ul class="nav-menu">
+          <li class="nav-menu-item"><a href="#">главная</a></li>
+          <li class="nav-menu-item nav-menu-item__underline">
+            <a href="#">посмотреть лоты</a>
+          </li>
+          <li class="nav-menu-item nav-menu-item__underline">
+            <a href="#">об аукционе</a>
+          </li>
+        </ul>
+
+        <div class="header-logo">
+          <img src="/images/logo-black.svg" alt="Logo" width="148" />
+        </div>
+
+        <div class="contacts">
+          <a href="tel:+99995555555">+9 999 555 5555</a>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          <span> наб. Принсенграхт 263-<br />265, Амстердам </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="motivation">
+      <div class="overlay"></div>
+
+      <div class="motivation-text">
+        <h1>Оно</h1>
+        <h1>Тебе</h1>
+        <h1>Надо</h1>
+      </div>
+
+      <div class="motivation-actions">
+        <h2>Аукцион вещей, в которые никто не верил</h2>
+        <button class="btn">Сделать ставку</button>
+      </div>
+    </div>
+
+    <div class="default-container goods">
+      <h1 class="goods-title">Лоты</h1>
+
+      <div class="goods-cards">
+        <div class="good-card" id="overlay1">
+          <div class="good-card_overlay"></div>
+
+          <div class="good-card_title">
+            <h2>Фильм режиссёра, который бросил киношколу</h2>
+          </div>
+
+          <div class="good-card_description">
+            <p>
+              Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+              ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+            </p>
+          </div>
+        </div>
+
+        <div class="good-card" id="overlay2">
+          <div class="good-card_overlay"></div>
+
+          <div class="good-card_title">
+            <h2>
+              Книга, где описан один скучный день из жизни рекламного агента
+            </h2>
+          </div>
+
+          <div class="good-card_description">
+            <p>
+              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
+              переходами на древнеанглийский. В ней одновременно рассказывается
+              о 16 июня 1904 года и об истории литературы, начиная с античных
+              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
+              бы вы поставили на «Улисса» Джеймса Джойса?
+            </p>
+          </div>
+        </div>
+
+        <div class="good-card" id="overlay3">
+          <div class="good-card_overlay"></div>
+
+          <div class="good-card_title">
+            <h2>Картина, которую повторит даже 5-летний сын маминой подруги</h2>
+          </div>
+
+          <div class="good-card_description">
+            <p>
+              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
+              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
+              Сколько бы вы на такое поставили, если бы не знали, что это — одна
+              из революционных работ Кандинского?
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <div class="goods-see-more-container">
+        <a href="#" class="goods-see-more">посмотреть больше</a>
+      </div>
+    </div>
+
+    <div class="default-container about">
+      <div class="about-logo">
+        <img src="/images/logo-column.png" alt="Logo column" />
+      </div>
+      <div class="about-text">
+        <h1 class="about-text_title">Об аукционе</h1>
+
+        <div class="about-text_description">
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="footer-container">
+        <div class="contacts">
+          <a href="tel:+99995555555">+9 999 555 5555</a>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          <span> наб. Принсенграхт 263-<br />265, Амстердам </span>
+        </div>
+
+        <div>
+          <ul class="nav-menu nav-menu-footer">
+            <li class="nav-menu-item"><a href="#">главная</a></li>
+            <li class="nav-menu-item nav-menu-item__underline">
+              <a href="#">посмотреть лоты</a>
+            </li>
+            <li class="nav-menu-item nav-menu-item__underline">
+              <a href="#">об аукционе</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-socials">
+          <img src="/images/yt.svg" alt="YouTube" />
+          <img src="/images/vk.svg" alt="VK" />
+          <img src="/images/pinterest.svg" alt="Pinterest" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
