add `main` element

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </header>
 
-    <section>
+    <main>
       <div class="motivation">
         <div class="overlay"></div>
 
@@ -55,7 +55,7 @@
           <button class="btn">Сделать ставку</button>
         </div>
       </div>
-    </section>
+    </main>
 
     <section>
       <div class="default-container goods">
